--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   ],
   "dependencies": {
     "react": "~19.0.0",
-    "react-dom": "~19.0.0",
-    "react-spinners": "^0.15.0"
+    "react-dom": "~19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -29,6 +28,7 @@
     "@types/react-dom": "19.0.2",
     "@types/react-slick": "^0.23.13",
     "@vitejs/plugin-react": "^4.3.4",
+    "esbuild": "^0.25.0",
     "eslint": "^9.20.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
@@ -47,6 +47,7 @@
     "glob": "^11.0.1",
     "react-bootstrap": "^2.10.9",
     "react-slick": "^0.30.3",
+    "react-spinners": "^0.15.0",
     "slick-carousel": "^1.8.1",
     "yet-another-react-lightbox": "^3.21.7"
   }
